[package]
name = "task-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
webbrowser = "0.8"
colored = "2.0"
dialoguer = "0.10.0"
indicatif = "0.17.0"
termimad = "0.20"
tui = { version = "0.19", default-features = false, features = ['termion'] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
octocrab = "0.25"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"